@startuml
hide circle

entity "t_user" as t_user {
    * id
    --
      enabled
      from_ts
      to_ts
      ignored
      name
      props
      digest
}

entity "t_asset" as t_asset {
    * id
    --
      enabled
      from_ts
      to_ts
      ignored
      name
      gen
      sn
      user_id
      priority
      props
      digest
}

t_user ||--o{ t_asset : "id = user_id"

entity "m_jobdef" as m_jobdef {
    * id
    --
      from_ts
      to_ts
      ignored
      job_kind
      job_target
      timeout
      name
      plugin
      trnsdef
      filtdef
      job_props
}

entity "m_schedef" as m_schedef {
    * id
    --
      jobdef_id
      from_ts
      to_ts
      ignored
      priority
      name
      val
}

m_jobdef ||--o{ m_schedef : "id = jobdef_id"

entity "t_job" as t_job {
    * id
    --
      stat
      kind
      target
      sche_ts
      limit_ts
      begin_ts
      end_ts
      props
      jobdef_id
      jobdef
      schedef_id
      schedef
      results
}

m_jobdef ||--o{ t_job : "id = jobdef_id"
m_schedef ||--o{ t_job : "id = schedef_id"

entity "m_appconf" as m_appconf {
    * id
    --
      from_ts
      to_ts
      ignored
      name
      val
}

@enduml
